--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
 </head>
 
 <body>
+  <header>
+    <% include /partials/_header %>
+  </header>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -22,7 +26,7 @@
         <% for(let url in urls) { %>
         <tr>
           <td><%= url %></td>
-          <td><a href="<%= urls[url] %>" ><%= urls[url] %></td>
+          <td><a href="<%= urls[url] %>"><%= urls[url] %></td>
         </tr>
 
         <% } %>
