--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,8 +29,8 @@
         <tr>
           <td><%= url %></td>
           <td><a href="<%= urls[url] %>"><%= urls[url] %></td>
-          <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
-          <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
+          <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-secondary btn-sm">Delete</button></form></td>
+          <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-secondary btn-sm">Edit</button></form></td>
         </tr>
 
         <% } %>
