--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,12 +8,14 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
       </div>
     </div>
     <% if(user === undefined) {%>
     <form class="form-inline" action="/login" method="POST">
       <div class="form-group mb-2">
-        <label for="username">Username:</label>
+        <label for="username">Email:</label>
         <input class="form-control" type="text" name="username" style="width: 200px; margin: 1em">
         <button type="submit" class="btn btn-sm" style="background-color: #92aac7">Login</button>
       </div>
