--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp Registration</title>
+  <title>TinyApp Login</title>
 </head>
 
 <body>
@@ -18,24 +18,18 @@
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
-      <form class="form-inline" action="/register" method="POST">
+      <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2 mx-auto">
           <label for="email">Email:</label>
-          <input class="form-control" type="email" name="email" placeholder="Email"/>
+          <input class="form-control" type="email" name="email" placeholder="Email" />
           <label for="password">Password:</label>
           <input class="form-control" type="password" name="password" placeholder="Password" />
-          <button type="submit" class="btn" style="background-color: #92aac7">Register</button>
+          <button type="submit" class="btn" style="background-color: #92aac7">Login</button>
         </div>
       </form>
     </div>
     <div class="card-footer text-muted"></div>
   </div>
-  <div class="btn-block">
-    <p>By clicking Register, you agree on our <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Privacy Policy</a> for TinyApp.</p>
-
-    
-  </div>
-  </form>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
