--- a/views/urls_reg.ejs
+++ b/views/urls_reg.ejs
@@ -13,16 +13,16 @@
   <header>
     <% include /partials/_header %>
   </header>
-
+  <div style="text-align: center;"><h2>Register for TinyApp</h2></div>
 
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
       <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2 mx-auto">
+        <div class="form-group mb-2 mx-auto"><p>
           <label for="email">Email:</label>
           <input class="form-control" type="email" name="email" placeholder="Email"/>
-          <label for="password">Password:</label>
+          <label for="password">Password:</label></p>
           <input class="form-control" type="password" name="password" placeholder="Password" />
           <button type="submit" class="btn" style="background-color: #92aac7">Register</button>
         </div>
@@ -31,7 +31,7 @@
     <div class="card-footer text-muted"></div>
   </div>
   <div class="btn-block">
-    <p>By clicking Register, you agree on our <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Privacy Policy</a> for TinyApp.</p>
+    <p style="text-align: center;">By clicking Register, you agree on our <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Privacy Policy</a> for TinyApp.</p>
 
     
   </div>
