--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,12 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #a1be95">
     <a class="navbar-brand" href="/urls" style="color: #ed5752;font-family: Arial, Helvetica, sans-serif;">TinyApp</a>
-<<<<<<< HEAD
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-=======
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
->>>>>>> feature/user-registration
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -16,28 +12,13 @@
 
       </div>
     </div>
-<<<<<<< HEAD
-    <% if(username === undefined) {%>
-    <form class="form-inline" action="/login" method="POST">
-      <div class="form-group mb-2">
-        <label for="username">Username:</label>
-        <input class="form-control" type="text" name="username" style="width: 200px; margin: 1em">
-        <button type="submit" class="btn btn-sm" style="background-color: #92aac7">Login</button>
-      </div>
-    </form>
-    <% } else { %>
-      <p style="margin: 1em"> <%= username %> </p>
-      <form method="POST" action="/logout"><button type="submit " class="btn btn-sm" style="background-color: #92aac7">Logout</button></form>
-      <% } %>
-=======
     <% if(user === undefined) {%>
-    <a class="nav-item nav-link" href="/login">Login</a>
-    <a class="nav-item nav-link" href="/register">Register</a>
+    <a class="nav-item nav-link" style="color: #4a6a91" href="/login">Login</a>
+    <a class="nav-item nav-link" style="color: #4a6a91" href="/register">Register</a>
     <% } else { %>
     <p style="margin: 1em"> <%= user["email"] %> </p>
     <form method="POST" action="/logout"><button type="submit " class="btn btn-sm"
         style="background-color: #92aac7">Logout</button></form>
     <% } %>
->>>>>>> feature/user-registration
   </nav>
 </header>
