--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,7 +28,7 @@
         <% for(let url in urls) { %>
         <tr>
           <td><%= url %></td>
-          <td><a href="<%= urls[url] %>"><%= urls[url] %></td>
+          <td><a href="<%= urls[url] %>"><%= urls[url]["longURL"] %></td>
           <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-secondary btn-sm">Delete</button></form></td>
           <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-secondary btn-sm">Edit</button></form></td>
         </tr>
