--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -18,6 +18,7 @@
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
+      Login:
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2 mx-auto">
           <label for="email">Email:</label>
