--- a/views/urls_reg.ejs
+++ b/views/urls_reg.ejs
@@ -19,10 +19,10 @@
     <div class="card-header"></div>
     <div class="card-body">
       <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2 mx-auto"><p>
+        <div class="form-group mb-2 mx-auto">
           <label for="email">Email:</label>
           <input class="form-control" type="email" name="email" placeholder="Email"/>
-          <label for="password">Password:</label></p>
+          <label for="password">Password:</label>
           <input class="form-control" type="password" name="password" placeholder="Password" />
           <button type="submit" class="btn" style="background-color: #92aac7">Register</button>
         </div>
