--- a/views/urls_error.ejs
+++ b/views/urls_error.ejs
@@ -12,30 +12,8 @@
   <header>
     <% include /partials/_header %>
   </header>
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      <h5 class="card-title"> TinyURL for: <a href="<%= longURL %>"><%= longURL %></a></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-    </div>
-
-  </div>
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
-        <div class="form-group mb-2 mx-auto">
-          <label for="longURL">Update the URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="http://"
-            style="width: 300px; margin: 1em">
-          <button type="submit" class="btn" style="background-color: #5a789c">Submit</button>
-        </div>
-      </form>
-    </div>
-    <div class="card-footer text-muted"></div>
-  </div>
-
-
+  <h1>Whoops.</h1>
+  <p><%= error %></p>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
