--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
+  <style>
+    .longurl {
+      display: block;
+      width: 250px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  </style>
 </head>
 
 <body>
@@ -20,15 +28,17 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Views</th>
           <th scope="col">Delete</th>
-          <th scope="col">Edit</th>
+          <th id="lastcol" scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
         <tr>
-          <td><%= url %></td>
-          <td><a href="<%= urls[url] %>"><%= urls[url]["longURL"] %></td>
+          <td><a href="/u/<%= url %>"><%= url %></a></td>
+          <td class="longurl"><%= urls[url]["longURL"] %></td>
+          <td><%= viewCount[url] %></td>
           <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-secondary btn-sm">Delete</button></form></td>
           <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-secondary btn-sm">Edit</button></form></td>
         </tr>
@@ -36,6 +46,9 @@
         <% } %>
       </tbody>
     </table>
+    <form method="GET" action="/urls/new">
+    <button type="submit" class="btn btn-sm" style="float: left; margin-left: 5px;background-color: #5d7ca3; color :white">Add new link</button>
+    </form>
   </main>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
