--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -7,29 +7,47 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp Login</title>
+  <style>
+    .block {
+      max-width: 340px;
+      min-height: 240px;
+      padding: 10px;
+      margin: auto;
+      border-radius: 5px;
+      border: solid 1px #ccc;
+      background: #ebebeb;
+    }
+
+    form {
+      margin: 0 30px;
+    }
+
+    button {
+      width: auto;
+      padding: 10px;
+      margin: 10px auto;
+    }
+  </style>
 </head>
 
 <body>
   <header>
     <% include /partials/_header %>
   </header>
+  <br>
 
-
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      Login:
+  <div class="block">
+      <h2 style="text-align: center;">Login:</h2>
+      <hr>
       <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2 mx-auto">
-          <label for="email">Email:</label>
-          <input class="form-control" type="email" name="email" placeholder="Email" />
-          <label for="password">Password:</label>
-          <input class="form-control" type="password" name="password" placeholder="Password" />
-          <button type="submit" class="btn" style="background-color: #92aac7">Login</button>
+        <div class="form-group mb-2 mx-auto container">
+          <label for="email"></label>
+          <input class="form-control" type="email" name="email" placeholder="Email" required/>
+          <label for="password"></label>
+          <input class="form-control" type="password" name="password" placeholder="Password" required/>
+          <button type="submit" class="btn" style="background-color: #5d7ca3; color :white">Login</button>
         </div>
       </form>
-    </div>
-    <div class="card-footer text-muted"></div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
