working through requirement checklist, improving readability

--- a/views/urls_error.ejs
+++ b/views/urls_error.ejs
@@ -13,7 +13,8 @@
     <% include /partials/_header %>
   </header>
   <h1>Whoops.</h1>
-  <p><%= error %></p>
+  <h3><%= error.id %></h3>
+  <p><%= error.msg %></p>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
