--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -28,7 +28,7 @@
           <label for="longURL">Update the URL:</label>
           <input class="form-control" type="text" name="longURL" placeholder="http://"
             style="width: 300px; margin: 1em">
-          <button type="submit" class="btn" style="background-color: #5a789c">Submit</button>
+          <button type="submit" class="btn" style="background-color: #5d7ca3; color :white">Submit</button>
         </div>
       </form>
     </div>
