updated to hash passwords

--- a/views/urls_reg.ejs
+++ b/views/urls_reg.ejs
@@ -43,9 +43,9 @@
       <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2 mx-auto container">
           <label for="email"></label>
-          <input class="form-control" type="email" name="email" placeholder="Email" required/>
+          <input class="form-control" type="email" name="email" placeholder="Email"/>
           <label for="password"></label>
-          <input class="form-control" type="password" name="password" placeholder="Password" required/>
+          <input class="form-control" type="password" name="password" placeholder="Password"/>
           <button type="submit" class="btn" style="background-color: #5d7ca3; color :white">Register</button>
         </div>
       </form>
