--- a/views/urls_reg.ejs
+++ b/views/urls_reg.ejs
@@ -13,9 +13,6 @@
       min-height: 240px;
       padding: 10px;
       margin: auto;
-      border-radius: 5px;
-      border: solid 1px #ccc;
-      background: #ebebeb;
     }
 
     form {
@@ -52,7 +49,7 @@
 
   </div>
   <div class="btn-block">
-    <p style="text-align: center; font-size: smaller;">By clicking Register, you agree to our <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Privacy Policy</a> for TinyApp.</p>
+    <p style="text-align: center; font-size: smaller;">By clicking Register, you agree to our <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Privacy Policy</a> for TinyApp.</p>
 
     
   </div>
