--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,7 +30,7 @@
           <th scope="col">Long URL</th>
           <th scope="col">Views</th>
           <th scope="col">Delete</th>
-          <th id="lastcol" scope="col">Edit</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
